update rooms to use area